# bash-commander

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  README.md  bash_commander  bashline.c  commander.c  commander.h  config-bot.h  config-linux.h  config-macos.h  config.cmake  config.h  configure  configure.ac  execute_cmd.c  expr.c  jobs.c  locale.c  parse.y  parser-built  patchlevel.h  sig.c  subst.c  variables.c  variables.h  version.c  version.h  y.tab.c  y.tab.h
builtins/: CMakeLists.txt  read.def
examples/dialogbox/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  dialogbox.c
examples/loadables/: uname.c
examples/startup-files/: bash_commander  bash_dialog
include/: posixtime.h
lib/glob/: CMakeLists.txt
lib/readline/: CMakeLists.txt  Makefile.in  bind.c  display.c  find.c  funmap.c  nls.c  readline.h  rltty.c  signals.c  terminal.c  text.c
lib/sh/: CMakeLists.txt
lib/tilde/: CMakeLists.txt
patches/: bashline.diff  display.diff  locale.diff  parse.diff  sig.diff  terminal.diff  variables.diff
po/: tr.po
